# ThesisBackup

./: README.md  main.py
Clouds/07012024_Reg_dense/: RegularSettings_Dense
Clouds/07012024_Reg_organised/: RegularSettings_Organised
ThesisPractical/: ExistingSolutions  Messages  PraktikaOsaTekstid  Ros_hints  Ros_tutorial  StepsAlways  StepsDone  ros_tutorials.txt
ThesisPractical/Nav2-Detection-Costmaps/src/a_semantic_interfaces/: package.xml
ThesisPractical/Nav2-Detection-Costmaps/src/a_semantic_interfaces/srv/: AddThreeInts.srv
ThesisPractical/Nav2-Detection-Costmaps/src/costmap_rules/costmap_rules/: costmap_rule.py
ThesisPractical/ROS_ML_Integration/models/: help.txt  main.py  main_for_rgb_segmentation.py  paddle_paddle_exmp.py
ThesisPractical/ROS_ML_Integration/models/ObjectDetection/: __init__.py  helpers.py  segmentation.py
ThesisPractical/ROS_ML_Integration/models/ObjectDetection/file_management/: png_save_lib.py
ThesisPractical/ROS_ML_Integration/models/RealSense/: __init__.py  sensor.py
ThesisPractical/ROS_ML_Integration/models/RealSense/file_management/: __init__.py
ThesisPractical/ROS_ML_Integration/models/RealSense/sensor_management/: __init__.py  png_mode.py
ThesisPractical/ROS_ML_Integration/models/paddlepaddle_data/: model.pdiparams.info  model.pdmodel
ThesisPractical/abc_wc/install/: local_setup.sh  setup.sh
ThesisPractical/abc_wc/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
ThesisPractical/abc_wc/install/turtlesim/share/turtlesim/: package.sh
ThesisPractical/abc_wc/log/: latest_build
ThesisPractical/myros_ws/: README.txt
ThesisPractical/myros_ws/install/: local_setup.sh  setup.sh
ThesisPractical/myros_ws/install/semantic_segmentation/share/semantic_segmentation/: package.dsv  package.ps1  package.sh  package.xml
ThesisPractical/myros_ws/log/: latest_build
ThesisPractical/myros_ws/params/: nav2_params_custom.yaml  remappings.yaml
ThesisPractical/myros_ws/src/a_semantic_interfaces/msg/: DistanceMapSlice.msg
ThesisPractical/myros_ws/src/a_semantic_rules/: package.xml
ThesisPractical/myros_ws/src/a_semantic_rules/py_srvcli/: client_member_function.py
ThesisPractical/myros_ws/src/a_simple_costmap_plugin/src/: simple_costmap_plugin.cpp
ThesisPractical/myros_ws/src/semantic_segmentation/: README.md  setup.py
ThesisPractical/myros_ws/src/semantic_segmentation/semantic_segmentation/: cv_bridge.py  segmentation_node.py
ThesisPractical/myros_ws/src/semantic_segmentation/unused_ros1_remnants/: CMakeLists.txt  segmentation_node_ros1.py
ThesisPractical/myros_ws/src/tutorials/cpp_pubsub/: CMakeLists.txt  package.xml
ThesisPractical/myros_ws/src/tutorials/my_package/: package.xml
ThesisPractical/myros_ws/src/tutorials/nav2_plugin_tutorial/: CMakeLists.txt  package.xml  tutorial_layer.xml
ThesisPractical/myros_ws/src/tutorials/nav2_plugin_tutorial/ignored/: tutorial_plugin.cpp
ThesisPractical/myros_ws/src/tutorials/nav2_plugin_tutorial/include/nav2_plugin_tutorial/: tutorial_costmap_plugin.hpp
ThesisPractical/myros_ws/src/tutorials/nav2_plugin_tutorial/src/: tutorial_costmap_plugin.cpp
ThesisPractical/myros_ws/src/tutorials/py_pubsub/: package.xml  setup.py
ThesisPractical/realsense_ws/install/: local_setup.sh  setup.sh
ThesisPractical/realsense_ws/log/: latest_build
ThesisPractical/ros2_ws/install/: local_setup.sh  setup.sh
ThesisPractical/ros2_ws/log/: latest_build
ThesisPractical/ros2_ws/src/MapMOS/: COLCON_IGNORE
ThesisPractical/ros2_ws/src/robot-ros2-messages/: CMakeLists.txt
ThesisPractical/ros2_ws/src/robot_ros2/: README.md  package.xml  setup.py
ThesisPractical/ros2_ws/src/robot_ros2/debug_images/: pathmask_3.pbm
ThesisPractical/ros2_ws/src/robot_ros2/hospital_carrier/: MqttRemoteControl.py  PS4Controller.py  ReadQR.py
ThesisPractical/ros2_ws/src/robot_ros2/hospital_carrier/lib/approxeng/input/: __init__.py
ThesisPractical/ros2_ws/src/robot_ros2/image_masks/: pathmask_1.pbm  pathmask_3.pbm  pathmask_6.pbm
ThesisPractical/ros2_ws/src/robot_ros2/launch/: drive.launch  mapping.launch
ThesisPractical/ros2_ws/src/robot_ros2/urdf/: robot.urdf.xacro
ThesisPractical/ros2_ws_backup/log/: latest_build
ThesisPractical/ros2_ws_backup/src/robot-ros2-messages/: README.md
ThesisPractical/ros2_ws_backup/src/robot_ros2/: Hospital_carrier_robot_platfrom_ROS_code_overview.md  setup.cfg
ThesisPractical/ros2_ws_backup/src/robot_ros2/config/: cameraparams.txt  mapper_params_online_async.yaml
ThesisPractical/ros2_ws_backup/src/robot_ros2/debug_images/: pathmask_0.pbm  pathmask_1.pbm  pathmask_2.pbm  pathmask_4.pbm  pathmask_5.pbm  pathmask_6.pbm
ThesisPractical/ros2_ws_backup/src/robot_ros2/hospital_carrier/: EncoderSim.py  MqttVideoStreamer.py  ObstacleAvoidanceHelpers.py  open3d_ros_helper.py  watchdog.py
ThesisPractical/ros2_ws_backup/src/robot_ros2/image_masks/: pathmask_0.pbm  pathmask_2.pbm  pathmask_4.pbm  pathmask_5.pbm
ThesisPractical/ros2_ws_backup/src/robot_ros2/launch/: README.md
ThesisPractical/ros2_ws_backup/src/robot_ros2/urdf/: robot_base.urdf.xacro
ThesisPractical/rtabmap_ws/install/: local_setup.sh  setup.sh
ThesisPractical/rtabmap_ws/install/rtabmap/lib/: librtabmap_gui.so.0.21  librtabmap_utilite.so.0.21
ThesisPractical/rtabmap_ws/log/: latest_build
ThesisPractical/segformer_example/MyDockerTest/: docker-compose.yml  odoo.conf
ThesisPractical/tests_ws/install/: local_setup.sh  setup.sh
ThesisPractical/tests_ws/log/: latest_build
ThesisPractical/tests_ws/src/3d_semantic_segmentation/: package.xml
ThesisPractical/tests_ws/src/ros-semantic-segmentation/semantic_segmentation/: CMakeLists.txt  package.xml
python-packages/mseg-api/mseg.egg-info/: PKG-INFO  SOURCES.txt
python-packages/mseg-semantic/mseg_semantic.egg-info/: PKG-INFO  SOURCES.txt
ros-packages/nav2_ws/install/: local_setup.sh  setup.sh
ros-packages/nav2_ws/log/: latest_build
ros-packages/nav2_ws/src/navigation2/tools/: underlay.repos
(+2115 files in other folders)
