<?xml version="1.0"?>
<package format="3">
  <name>hospital_carrier</name>
  <version>0.0.0</version>
  <description>The hospital_carrier package</description>

  <maintainer email="walid.remmas@taltech.ee">walid</maintainer>

  <license>TODO</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_ros2_msgs</exec_depend>
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>nav_msgs</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
