<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_plugin_tutorial</name>
  <version>1.0.0</version>
  <description>Practise creating nav2 plugins</description>
  <maintainer email="mihkel@notreally.test">mihkel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>rclcpp</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <costmap_2d plugin="${prefix}/tutorial_layer.xml"/>
  </export>
</package>
