<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation</name>
  <version>0.1.0</version>
  <description>Semantic segmentation</description>

  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <maintainer email="mihkel.marten@ruutli.net">Mihkel Marten Rüütli</maintainer>

  <license>BSD</license>

  <build_depend>std_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
        <build_type>ament_python</build_type>
  </export>
</package>
